# TextPy

./: .gitignore  Dockerfile  MANIFEST.in  README.md  main.py  pyproject.toml  test.py
.github/workflows/: docker-image.yml  python-publish.yml
examples/: SummaryInWorkflow.py  TranslateInWorkflow.py  arxiv_search.py  arxiv_search.sh  create_docker_image.py  daily_arxiv.py  deep_research.py  demo.py  pypi_info.py  story_gen.py  write_poem.py
examples/long_story_gen/: main.py  plan.py  text.py
tests/: test_code_compiler.py  test_codefunc.py  test_compiler_setup.py  test_text_compiler.py  test_textfunc.py
tests/func/: textfunc.py
textpy/: __init__.py
textpy/compiler/: __init__.py  compile_code.py  compile_pass.py  compile_text.py  compiler.py  optimize_code.py
textpy/compiler/prompts/: _gen_code_func.yaml  _gen_text_func.text.tpy  _gen_text_func.yaml  _textpy_built_in_gen_code_func.text.tpy  _textpy_built_in_gen_text_func.text.tpy  _understand_func.yaml  extract_ret.yaml
textpy/engine/: __init__.py  engine.py  lm_engine.py  py_engine.py
textpy/func/: __init__.py  code_func.py  func.py  text.py  text_func.py
textpy/jit/: __init__.py  jit.py
textpy/jit/func/: func.py  text.py
textpy/tvm/: __init__.py
textpy/vm/: __init__.py  code_vm.py  text.py  text_vm.py  tvm.py  vm.py
