[project]
name = "textpy_llm"
version = "0.1.4"
description = "TextPy: Collaborative Agent Workflow through Programming and Prompting"
authors = [
    {name = "Zhengmao Ye", email = "yezhengmaolove@gmail.com"}
]
maintainers = [
    {name = "Zhengmao Ye", email = "yezhengmaolove@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm==1.67.5",
]
